Corrected relative paths

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type">
         <title>Analytics Builder Information</title>
-        <base href="/">
+        <base href="./">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="icon" type="image/x-icon" href="../../favicon.ico">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h1>Analytics Builder</h1>
@@ -16,12 +16,12 @@
         <br>
         <ul>
             <li>
-                <a target="_blank" title="Analytics Builder User Guide" href="./assets/user-guide/user-guide.html">Analytics Builder User Guide</a>
+                <a title="Analytics Builder User Guide" href="user-guide/user-guide.html">Analytics Builder User Guide</a>
             </li>
         </ul>
         <ul>
             <li>
-                <a target="_blank" title="Customing the Analytics Builder" href="./assets/customising-guide/customising-guide.html">Customising the Analytics Builder</a>
+                <a title="Customising the Analytics Builder" href="customising-guide/customising-guide.html">Customising the Analytics Builder</a>
             </li>
         </ul>
     </body>
