--- a/src/assets/user-guide/user-guide.html
+++ b/src/assets/user-guide/user-guide.html
@@ -3,10 +3,10 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <title>Analytics Builder User Guide</title>
-    <base href="/">
+    <base href="./">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body><u><b></b></u>
     <h1>Analytics Builder User Guide</h1>
@@ -15,8 +15,8 @@
     The Analytics Builder provides a graphical interface which is used to
     configure the analytics which are supplied with the Industry Analytics Kit. <br>
     &nbsp;&nbsp;&nbsp; <br>
-    &nbsp;&nbsp;&nbsp; <a href="assets/user-guide/images/analytics-builder.png">
-      <img alt="Analytics Builder" src="assets/user-guide/images/analytics-builder.png">
+    &nbsp;&nbsp;&nbsp; <a href="images/analytics-builder.png">
+      <img alt="Analytics Builder" src="images/analytics-builder.png">
     </a> <br>
     <br>
     The builder consists of five main areas :<br>
