--- a/src/assets/customising-guide/customising-guide.html
+++ b/src/assets/customising-guide/customising-guide.html
@@ -3,10 +3,10 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <title>Analytics Builder Customising Guide</title>
-    <base href="/">
+    <base href="./">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico">
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body><u><b></b></u>
     <h1>Analytics Builder Customising Guide</h1>
@@ -28,7 +28,7 @@
     point for writing a custom analytic. The analytic template is available
     inside the Industry Analytics Kit under the samples folder. <br>
     <br>
-    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <img alt="Analytic Definition" src="assets/customising-guide/images/analytic-definition.png">
+    &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <img alt="Analytic Definition" src="images/analytic-definition.png">
     <br>
     <br>
     &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Inside the
